# kAIcad

./: .coverage  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  RESTRUCTURE_SUMMARY.md  WIKI_SETUP.md  codecov.yml  pyproject.toml  requirements-dev.txt  requirements.txt  temp_test.kicad_sch  test_error_message.py  test_pin_locations.py
.github/workflows/: ci.yml
docs/: architecture.md  changelog.md  component-inspection.md  dependency-locking.md  dev-notes.md  features.md  hierarchical-sheets.md  index.md  known-issues.md  roadmap.md  setup-wiki.ps1
docs/wiki/: Features.md  Getting-Started.md  Home.md  Installation.md  README.md
kaicad.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sidecar/: desk.py  inspector.py  main.py  models.py  planner.py  sch_model.py  schema.py  settings.py  symtab.py  tasks.py  watcher.py  web.py  writer_skip.py
src/kaicad/: __init__.py
src/kaicad.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/kaicad/config/: __init__.py  settings.py
src/kaicad/core/: __init__.py  inspector.py  model_registry.py  models.py  planner.py  planner_v2.py  writer.py
src/kaicad/kicad/: __init__.py  symtab.py  tasks.py  version.py  watcher.py
src/kaicad/schema/: __init__.py  plan.py  schematic.py
src/kaicad/ui/: __init__.py  cli.py  desktop.py  launcher.py
src/kaicad/ui/web/: __init__.py  app.py  errors.py
src/kaicad/ui/web/templates/: index.html
src/kaicad/utils/: __init__.py  backup.py  constants.py  logging.py  validation.py
tests/: __init__.py  test_diagnostics.py  test_golden_fixtures.py  test_inspector.py  test_integration.py  test_models.py  test_no_write_on_error.py  test_plan_roundtrip.py  test_planner.py  test_settings.py  test_smoke.py  test_tasks.py  test_web.py  test_web_security.py
tests/fixtures/: __init__.py  test_diagnostics.py  test_golden_fixtures.py  test_smoke.py
tests/integration/: test_inspector.py  test_integration.py  test_no_write_on_error.py  test_tasks.py
tests/ui/: test_cli_smoke.py  test_web.py  test_web_security.py
tests/unit/: test_bug_fixes.py  test_keychain_security.py  test_kicad_version.py  test_model_registry.py  test_models.py  test_plan_roundtrip.py  test_planner.py  test_planner_v2.py  test_settings.py
wiki/: Architecture.md  Dev-Notes.md  Home.md  Publishing.md
